--- a/wiki/BuildingPackage.wiki
+++ b/wiki/BuildingPackage.wiki
@@ -44,12 +44,7 @@ Optional but required for a complete build
  * fftw, FFT library, http://www.fftw.org/
 
 == Build QMCPACK with cmake ==
-Require [http://www.cmake.org cmake] to compile qmcpack package Theoretically
-speaking, QMCPACK can be used on any UNIX/LINUX machine with recent GNU C/C++
-compilers. For cmake documentation and guides, consult
-[http://www.cmake.org/Wiki/CMake cmake wiki]. Once the code is downloaded to
-_qmcpack_ directory, simply type
-
+Once the code is downloaded to `qmcpack` directory, 
 {{{
 cd qmcpack/build
 cmake ..
@@ -57,7 +52,10 @@ make
 }}}
 
 If everything goes well, then you should see *`qmcpack/build/bin/qmcapp`*. 
-Consult [CMakeExplained cmake help page] for the cmake-related topics.
+
+Theoretically speaking, QMCPACK can be used on any UNIX/LINUX machine with
+recent GNU C/C++ compilers. But, new users are likely to encounter many problems.
+Follow the instuctions in [CMakeExplained].
 
 = External libraries =
 
