--- a/wiki/AbeMvapich2.wiki
+++ b/wiki/AbeMvapich2.wiki
@@ -1,6 +1,8 @@
-#summary Toolchain file for abe at NCSA
+﻿#summary Toolchain file for abe at NCSA
+#sidebar TableOfContents
 
-{{{config/AbeMvapich2.cmake}}} has
+= {{{config/AbeMvapich2.cmake}}} =
+a prototype toolchain file for a build using Intel compilers on LINUX clusters. 
 
 {{{
 SET(CMAKE_SYSTEM_PROCESSOR "ES")
