Add li2 sample.
git-svn-id: http://qmcpack.googlecode.com/svn@4082 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/IntroXml.wiki
+++ b/wiki/IntroXml.wiki
@@ -27,6 +27,7 @@ Adding a comment is done simply by putting a comment section within
 {{{
 <!-- whatever -->
 }}}
+Recursive comments are not valid.
 
 We understand the cons of XML and a steep learning curve to overcome but we
 believe that the pros outweigh the cons. Especially from the developers'
