--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -4,9 +4,10 @@
   * [BuildingPackage Building]
   * [RunningApp Running]
   * [CMakeExplained cmake howto]
+ * Tutorials
+  * [SampleRuns Sample Runs]
+  * [Li2STOSample Li2]
  * For developers
   * [DevHandbook Developers' Handbook]
   * [ClassOverview Class Overview]
   * [IntroXml QMC-XML]
- * Tutorials
-  * [SampleRuns Sample Runs]
