Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4083 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,13 +1,13 @@
 ﻿#summary Navigation
 
- * Getting started
-  * [BuildingPackage Building]
-  * [RunningApp Running]
-  * [CMakeExplained cmake howto]
- * Tutorials
-  * [SampleRuns Sample Runs]
-  * [Li2STOSample Li2]
- * For developers
-  * [DevHandbook Developers' Handbook]
-  * [ClassOverview Class Overview]
-  * [IntroXml QMC-XML]
+Getting started
+ * [BuildingPackage Building]
+ * [RunningApp Running]
+ * [CMakeExplained cmake howto]
+Tutorials
+ * [SampleRuns Sample Runs]
+ * [Li2STOSample Li2]
+For developers
+ * [DevHandbook Developers' Handbook]
+ * [ClassOverview Class Overview]
+ * [IntroXml QMC-XML]
