--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -7,6 +7,7 @@
  * Tutorials
   * [SampleRuns Sample Runs]
   * [Li2STOSample Li2]
+  * [SHEGSample SHEG]
  * For developers
   * [DevHandbook Developers' Handbook]
   * [ClassOverview Class Overview]
