Import of bulkd solid by Ken.
git-svn-id: http://qmcpack.googlecode.com/svn@4087 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/SHEGSample.wiki
+++ b/wiki/SHEGSample.wiki
@@ -5,9 +5,9 @@
 Spherical Homegeneous Electron Gas (SHEG)
 
 = Procedure =
- # HF calculation of SHEG using this input file
+ * HF calculation of SHEG using this input file
  {{{bin/sqd jellium.xml}}}
- # QMC calculation using the HF orbitals
+ * QMC calculation using the HF orbitals
  {{{bin/qmcapp jellium.qmc.xml}}}
 
 == jellium.xml ==
