Fix a wiki link.
git-svn-id: http://qmcpack.googlecode.com/svn@4088 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,7 +5,7 @@
   * [RunningApp Running]
   * [CMakeExplained cmake howto]
  * Tutorials
-  * [SampleRuns Sample Runs]
+  * [TutorialslList Sample Runs]
   * [Li2STOSample Li2]
   * [SHEGSample SHEG]
  * For developers
