Remove left nav.
git-svn-id: http://qmcpack.googlecode.com/svn@4090 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/BulkSolidDFTSample.wiki
+++ b/wiki/BulkSolidDFTSample.wiki
@@ -1,5 +1,6 @@
 ﻿#summary Builk solid calculations using DFT orbitals
-#sidebar TableOfContents
+
+||[Welcome home]||[TutorialsList Tutorial]||
 
 = Introduction =
 Solids can be simulated in periodic boundary conditions using orbitals from a
