--- a/wiki/TutorialsList.wiki
+++ b/wiki/TutorialsList.wiki
@@ -1,6 +1,7 @@
 ﻿#summary Sample runs with input files
 #sidebar TableOfContents
 
+= Sample runs =
  * [Li2STOSample Li2 using Slater-type Molecular Orbitals]
  * [SHEGSample Spherical Homogeneous Electron Gas]
  * [BulkSolidDFTSample Bulk Solid with DFT oritals]
@@ -11,7 +12,7 @@ Prepare a wiki page starting with
 {{{
 #summary what this run does
 
-||[Welcome home]||[TutorialsList tutorials]||
+||[Welcome Home]||[TutorialsList tutorials]||
 
 .. wiki content ...
 
