--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -22,7 +22,7 @@ In many cases, QMC simulations start with the electronic structure calculations
 using DFT, HF and other many-body methods.  A few tools have been developed but
 any tools that can make QMCPACK useful and usable are always welcome.  The
 input/output uses XML and HDF5 and we will provide the schemas to assist
-developers of other electronic structure codes and tools.
+the developers of other electronic structure codes and tools.
 
 == Applications ==
 Anyone can download QMCPACK and use it for their research.  We ask the users to cite
